# MinecraftClone

./: CMakeLists.txt  README.md  cube.c  cube.h  datetime.c  datetime.h  logging.h  main.c  shader.c  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
